# bagimages

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh  wix_rules.wxs
.github/workflows/: deploy.yaml
res/: wix_rules_template.wxs
src/: args.rs  main.rs
src/common/: cursor.rs  error.rs  mod.rs  naming.rs
src/features/: mod.rs  renderer.rs
src/features/extract/: extract.rs  mod.rs  view.rs
src/sensor_msgs/: header.rs  image.rs  mod.rs
