[package]
name = "bagimages"
version = "1.1.3"
edition = "2021"
license = "MIT"
authors = [ "Anton Kolomeytsev <tonykolomeytsev@gmail.com>" ]
description = "A multi-platform and dependency-free tool for exporting images from rosbag files"
homepage = "https://github.com/tonykolomeytsev/bagimages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosbag = "0.6.0"
clap = { version = "3.2.5", features = ["derive"] }
image = "0.24.2"
crossterm = "0.23.2"
thiserror = "1.0.31"
byteorder = "1.4.3"
regex = "1.5.6"
